--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-    <h1>Testing</h1>
+    <h1>eBlast Images</h1>
     <img src="05-12-22-MAREK-02_Title.jpg" alt="eblast1">
     
 </body>
