--- a/index.html
+++ b/index.html
@@ -2,12 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <script type="text/javascript" src="script.js" defer></script>
+    <script
+        src="https://code.jquery.com/jquery-3.6.0.min.js"
+        integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"
+    ></script>
     <title>Aston Martin eBlast</title>
 </head>
 <body>
-
-    <h1>eBlast Images</h1>
-    <img src="05-12-22-MAREK-02_Title.jpg" alt="eblast1">
     
+    <h1>eBlast Images</h1>
+    <img class="myImg" src="05-12-22-MAREK-02_Title.jpg" alt="imgTemp">
+
 </body>
 </html>
