--- a/index.html
+++ b/index.html
@@ -2,16 +2,18 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <script type="text/javascript" src="script.js" defer></script>
+    <script type="text/javascript" src="scripts.js" defer></script>
     <script
         src="https://code.jquery.com/jquery-3.6.0.min.js"
         integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"
     ></script>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
     <title>Aston Martin eBlast</title>
 </head>
-<body>
+<body class="container">
     
-    <h1>eBlast Images</h1>
+    <h1 class="title is-2">Aston Martin Residences E-Blast Images</h1>
     <img class="myImg" src="05-12-22-MAREK-02_Title.jpg" alt="imgTemp">
 
 </body>
