--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body class="container">
     
     <h1 class="title is-2">Aston Martin Residences E-Blast Images</h1>
-    <img class="myImg" src="05-12-22-MAREK-02_Title.jpg" alt="imgTemp">
+<!--    <img class="myImg" src="https://crane-copper-h27n.squarespace.com/eblast/05-12-22-MAREK-02_Title.jpg" alt="imgTemp">-->
 
 </body>
 </html>
